--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -56,6 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_small"
                 android:text="@string/button_cancel"
+                android:textColor="@color/white"
                 android:backgroundTint="@color/orange"
                 tools:ignore="ButtonStyle" />
 
@@ -64,11 +65,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_small"
+                android:textColor="@color/white"
                 android:text="@string/button_add"
                 android:backgroundTint="@color/orange"
                 tools:ignore="ButtonStyle" />
-
-
         </LinearLayout>
 
 
