--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -8,6 +8,7 @@
     android:layout_gravity="center"
     android:paddingBottom="15dp"
     android:paddingTop="15dp"
+    android:layout_margin="@dimen/_20sdp"
     android:background="@drawable/background_item_recycle"
     android:layout_height="wrap_content">
 
