--- a/app/src/main/res/layout/dialog_task_end.xml
+++ b/app/src/main/res/layout/dialog_task_end.xml
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:text="lllkdddddddddddddddddddddddddddddddddddddddddddddddddddddd"
+                android:text=""
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_name1"
