--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -36,6 +36,7 @@
                 android:layout_marginHorizontal="@dimen/margin_small"
                 android:layout_weight="8"
                 android:gravity="center"
+                android:layout_gravity="center_vertical"
                 android:text="Danh mục"
                 android:textSize="20sp"
                 android:textStyle="bold" />
