--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -11,31 +11,36 @@
         android:padding="@dimen/margin_medium"
         android:background="@drawable/background_item_recycle">
 
-        <ImageView
-            android:id="@+id/imgCancel"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_back_foreground"
+        <LinearLayout
+            android:id="@+id/header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="MissingConstraints" />
+            app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/textview_add_task"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/imgCancel"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="MissingConstraints" />
+            <ImageView
+                android:id="@+id/imgCancel"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ic_back_foreground"
+                tools:ignore="MissingConstraints" />
 
-
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/textview_add_task"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginStart="20dp"
+                android:layout_gravity="center_vertical"
+                tools:ignore="MissingConstraints" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_Duration"
-            app:layout_constraintTop_toBottomOf="@id/imgCancel"
+            app:layout_constraintTop_toBottomOf="@id/header_layout"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_margin="@dimen/margin_medium"
             android:layout_width="0dp"
@@ -45,12 +50,11 @@
             android:text="@string/textview_duration"
             tools:ignore="MissingConstraints" />
 
-
         <TextView
             android:id="@+id/tv_Time"
             android:layout_width="85dp"
             app:layout_constraintStart_toEndOf="@id/tv_Duration"
-            app:layout_constraintTop_toBottomOf="@id/textView3"
+            app:layout_constraintTop_toBottomOf="@id/header_layout"
             android:layout_marginVertical="@dimen/margin_medium"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -71,7 +75,7 @@
             android:padding="@dimen/padding_small"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_Time"
-            app:layout_constraintTop_toBottomOf="@id/textView3"
+            app:layout_constraintTop_toBottomOf="@id/header_layout"
             tools:ignore="MissingConstraints" />
 
 
