--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -26,6 +26,7 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="start"
+                android:scaleType="fitCenter"
                 android:layout_weight="1"
                 android:src="@drawable/ic_back_foreground" />
 
@@ -47,6 +48,7 @@
                 android:layout_height="40dp"
                 android:layout_gravity="end"
                 android:layout_weight="1"
+                android:scaleType="fitCenter"
                 android:src="@drawable/ic_send_foreground" />
         </LinearLayout>
         <com.google.android.material.divider.MaterialDivider
@@ -78,7 +80,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchCategory"
+            app:layout_constraintTop_toBottomOf="@+id/searchTask"
             tools:ignore="MissingConstraints,UseCompoundDrawables">
 
             <TextView
@@ -115,7 +117,7 @@
             android:id="@+id/imgAddTask"
             android:layout_width="@dimen/img_size"
             android:layout_height="@dimen/img_size"
-            android:src="@drawable/baseline_add_circle_24"
+            android:src="@drawable/ic_add"
             android:backgroundTint="@color/orange"
             android:layout_margin="@dimen/margin_small"
             app:layout_constraintBottom_toBottomOf="parent"
