--- a/app/src/main/res/layout/fragment_task_detail_doing.xml
+++ b/app/src/main/res/layout/fragment_task_detail_doing.xml
@@ -112,6 +112,7 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="15dp"
+            android:padding="@dimen/_8sdp"
             android:background="@color/white"
             android:hint="@string/input_note"
             app:layout_constraintEnd_toEndOf="parent"
@@ -187,7 +188,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_btn_success"
-        android:text="Hoàn thành"
+        android:text=""
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="20sp"
