--- a/app/src/main/res/menu/contentmenu.xml
+++ b/app/src/main/res/menu/contentmenu.xml
@@ -1,17 +1,21 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_alll"
         android:title="Tất cả"/>
     <item
         android:id="@+id/menu_completed"
         android:title="Đã hoàn thành"
-        android:icon="@drawable/ic_completed" />
+        android:icon="@drawable/ic_completed"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/menu_not_completed"
         android:title="Chưa hoàn thành"
-        android:icon="@drawable/ic_not_completed" />
+        android:icon="@drawable/ic_not_completed"
+        app:showAsAction="never"/>
     <item
         android:id="@+id/menu_late"
         android:title="Muộn"
-        android:icon="@drawable/ic_late" />
+        android:icon="@drawable/ic_late"
+        app:showAsAction="never"/>
 </menu>
