--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -77,7 +77,7 @@
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchCategory"
+            app:layout_constraintTop_toBottomOf="@+id/searchTask"
             tools:ignore="MissingConstraints,UseCompoundDrawables">
 
             <TextView
