--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -15,11 +15,20 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:padding="@dimen/padding_small"
-            android:weightSum="9"
+            android:weightSum="10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="MissingConstraints">
+
+            <ImageView
+                android:id="@+id/img_Lang"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end"
+                android:scaleType="centerCrop"
+                android:layout_weight="1"
+                android:src="@drawable/ic_language" />
 
             <TextView
                 android:id="@+id/tvNameUser"
