--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,8 +89,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/margin_small"
+                android:background="@drawable/custom_edittext"
                 android:backgroundTint="@color/orange_FB9A09"
                 android:text="@string/button_login"
+                android:textSize="18sp"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 tools:ignore="MissingConstraints" />
