--- a/app/src/main/res/layout/dialog_add_category.xml
+++ b/app/src/main/res/layout/dialog_add_category.xml
@@ -53,8 +53,10 @@
             <Button
                 android:id="@+id/btnCancel"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
+                android:background="@drawable/bg_btn_success"
                 android:layout_margin="@dimen/margin_small"
+                android:textAllCaps="false"
                 android:text="@string/button_cancel"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/orange"
@@ -63,9 +65,11 @@
             <Button
                 android:id="@+id/btnAdd"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin_small"
+                android:layout_height="40dp"
+                android:background="@drawable/bg_btn_success"
+                android:layout_margin="@dimen/margin_medium"
                 android:textColor="@color/white"
+                android:textAllCaps="false"
                 android:text="@string/button_add"
                 android:backgroundTint="@color/orange"
                 tools:ignore="ButtonStyle" />
