--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -8,7 +8,7 @@
     android:layout_gravity="center"
     android:paddingBottom="15dp"
     android:paddingTop="15dp"
-    android:layout_margin="@dimen/_20sdp"
+    android:layout_margin="20dp"
     android:background="@drawable/background_item_recycle"
     android:layout_height="wrap_content">
 
@@ -54,9 +54,7 @@
             android:textAllCaps="false"
             android:background="@drawable/bg_btn_success"
             android:backgroundTint="@color/dark_gray"
-            android:textColor="@color/white"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="269dp" />
+            android:textColor="@color/white" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
