--- a/app/src/main/res/layout/dialog_task_end.xml
+++ b/app/src/main/res/layout/dialog_task_end.xml
@@ -87,11 +87,12 @@
                 android:id="@+id/spinner_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
                 android:text="@={task.score}"
+                android:textColor="@color/black"
+                android:layout_marginStart="@dimen/margin_medium"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_name4"
-                app:layout_constraintStart_toStartOf="@+id/des_task"
+                app:layout_constraintStart_toEndOf="@+id/tv_name4"
                 app:layout_constraintTop_toTopOf="@+id/tv_name4" />
 
             <TextView
@@ -140,7 +141,7 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/des_task"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/time_task" />
+                app:layout_constraintTop_toTopOf="@+id/des_task" />
 
             <TextView
                 android:id="@+id/tv_name4"
@@ -177,7 +178,7 @@
             android:text="@string/label_success"
             android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:layout_marginTop="15dp"
             android:paddingStart="20dp"
             android:paddingEnd="20dp"
