--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -36,6 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="@dimen/margin_small"
                 android:layout_weight="8"
+                android:gravity="center"
                 android:text="@string/app_name"
                 android:textSize="22sp"
                 android:textStyle="bold" />
